Fixing details list selected high contrast state

--- a/packages/office-ui-fabric-react/src/components/Check/Check.scss
+++ b/packages/office-ui-fabric-react/src/components/Check/Check.scss
@@ -47,6 +47,10 @@ $checkBoxHeight: 16px;
 
 .rootIsChecked .circle {
   color: $ms-color-white;
+
+  @media screen and (-ms-high-contrast: active) {
+    display: none;
+  }
 }
 
 .check {
